--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,6 @@ body{
     top: 100px;
     left: 5708px;
     background-color: lightgray;
-    /* background: url(<path-to-image>), lightgray 0px 0px / 100% 100% no-repeat; */
     color: black;
 }
 a{
@@ -25,13 +24,10 @@ ul li{
     max-width: 1066px ;
     margin: 0 auto;
     padding: 0 15px;
-    /* background-color: whitesmoke; */
 }
 .baner_wrap{
     position: relative;
-    padding-top: 10px;
-    /* background-color: whitesmoke; */
-    
+    padding-top: 10px; 
 }
 .baner_wrap::before{
     position: absolute;
@@ -45,7 +41,6 @@ ul li{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    /* background-color: whitesmoke;    */
 }
 .Honey_logo-img{
     display: flex;
@@ -103,24 +98,20 @@ ul li{
 }
 .Honey_img{
     position: absolute;
-    width: 57%;
-    height: 83%;
+    width: 44%;
+    height: 53%;
     align-items: center;
     justify-content: center;
     top: 0;
     right: 0;
-    /* background: url(<path-to-image>), whitesmoke 0px no-repeat; */
-    /* background-color: whitesmoke; */
 }
 .Honey_hon{
     position: absolute;
     flex-shrink: 0;
-    width: 30%;
-    height: 20%;
+    width: 20%;
+    height: 10%;
     top: 0;
-    right: 0;
-    /* background-color: whitesmoke; */
- 
+    right: 0; 
 }
 .chat_1{
     display: flex;
@@ -136,21 +127,17 @@ ul li{
 .News_subtitle{
     font-size: 25px;
 }
-.News_section{
-    /* background-color: whitesmoke; */
-    
-}
+
 .News_img{
     width: 50%;
     height: 83%; 
-    /* background-color: whitesmoke; */
 }
 
 .about_img{
-    /* flex-shrink: 0; */
     position: relative;
     width: 421.41px;
-    height: 826px;
+    height: 83%; 
+    /* height: 826px; */
     left: 877.98px;
     top: -900px;
       
@@ -163,13 +150,10 @@ ul li{
     justify-content: right;
     font-weight: 600;
     font-size: 136px;
-
  }
  .section_subtitle{
     color: #C74817;
-    justify-content: right;
-  
-   
+    justify-content: right; 
  }
  .about_text{
     margin-bottom: 35px;
@@ -179,27 +163,19 @@ ul li{
     position: absolute;
     right:  0;
     bottom: 0;
-    /* background-color: whitesmoke; */
 }
 .Products_section{
-    /* padding-bottom: 120px; */
     text-align: center;
 }
 .products_wrap{
     display: flex;
-    height: 855.172px;
-    /* padding: 80px 310px 10px 310px; */
+    /* height: 855.172px; */
     justify-content: center;
     align-items: center;
-   /* display: flex;
-    justify-content: space-between;
-    gap: 10px;
-    padding: 42px;*/
-    background: url(<path-to-image>), whitesmoke 0px -72.414px / 100% 116.936% no-repeat;
+    /* background: url(<path-to-image>), whitesmoke 0px -72.414px / 100% 116.936% no-repeat; */
 }
 .section_subtitle_c{
     font-size: 25px;
-    /* background-color: whitesmoke; */
     color: #131313;
 }
 .Products_img{
@@ -213,7 +189,6 @@ ul li{
     flex-direction: column;
     justify-content: center;
     color: #131313;
-
     text-align: center;
     font-family: Open Sans;
     font-size: 26px;
@@ -251,8 +226,6 @@ ul li{
     justify-content: center;
     text-align: center;
     font-size: 23px;
-    
-
 }
 .img{
     display: block;
@@ -332,8 +305,50 @@ line-height: 30.006px; /* 166.7% */
 }
 .sing_wrap{
     display: flex;
-    flex-wrap: wrap;
     justify-content: space-between;
-    position: relative;
+    align-items: center;
+    gap: 10px;
+}
+.Sing_form{
+    justify-content: space-between;
+}
+.Sing_form_reset{
+    background-color: #C74817;
+    color: white;
+}
+.Types_wrap{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    /* display: flex;
+    flex-wrap: wrap;
+    flex-direction: column; */
 
+    /* justify-content: center;
+    align-items: center; */
+}
+.Types_title{
+    font-size: 50px;
+}
+.Types_text{
+    font-size: 24px;
+}
+.all_wrap{
+    display: flex;
+    justify-content: center;
+    align-items: center; 
+}
+.footer_text{
+    font-size: 25px;
+}
+.Footer_img{
+    width: 40px;
+    height: 28px;
+    flex-shrink: 0;
+    align-items:center;
+    justify-content: right;
+}
+.container{
+    display: block;
+    justify-content: center;
+    align-items: center; 
 }
